# tintel-trading

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: api-ci.yml  frontend-ci.yml
api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
api/.venv311/: pyvenv.cfg
api/.venv311/Scripts/: activate  activate.bat  pwiz.py
api/alembic/: env.py
api/alembic/versions/: 0001_init.py
api/app/: config.py  db.py  main.py  models.py  schemas.py  scoring.py
api/app/providers/: base.py  edgar.py  finnhub.py  mock.py  news.py  short_interest.py  yahoo.py
api/app/routers/: screener.py  search.py  ticker.py  weekly.py
api/app/services/: screener.py  screeners.py  ticker.py  weekly.py
api/app/utils/: filters.py  finnhub.py  indicators.py  yahoo.py
api/scripts/: etl_intraday.py  etl_nightly.py
api/tests/: test_filters.py  test_scoring.py
frontend/: .eslintrc.json  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/ticker/[symbol]/: page.tsx
frontend/app/weekly/: page.tsx
frontend/components/: Badge.tsx  Card.tsx  Chat.tsx  FactorTooltip.tsx  Logo.tsx  RadarChart.tsx  Search.tsx  Sparkline.tsx  Table.tsx  Toggle.tsx
frontend/lib/: api.ts  state.ts
infra/: neon.sql  render.yaml  vercel.json
