[project]
name = "tintel-api"
version = "0.1.0"
description = "tintel FastAPI service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.5.2",
  "sqlmodel>=0.0.22",
  "alembic>=1.13.2",
  "psycopg[binary,pool]>=3.2.1",
  "yfinance>=0.2.43",
  "httpx>=0.27.2",
  "python-dateutil>=2.9.0",
  "pandas>=2.2.3",
  "numpy>=2.1.2",
  "tenacity>=9.0.0",
  "loguru>=0.7.2"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "bandit"]

[tool.ruff]
line-length = 100
